# tile-engine

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
game/: app  map.csv
src/: camera.hpp  game.hpp  gameobject.hpp  main.cpp  map.hpp  player.hpp  tile.hpp
src/assets/textures/: atlas.h  header.py  stitch.py  texture_positions.csv
src/shaders/: bullet.frag  light.frag  light_perspective.frag  perspective_transform.frag
src/utils/: gui.h  obstacle_manager.h  post_processing.h  rand.h  ray.h  rect.h  segment.h  sprite_manager.h  vec.h
src/world/: bullet.h  cursor.h  enemies.h  entity.h  floor.h  gameobject.hpp  light.h  lightmap.h  map.hpp  obstacle.h  player.hpp  tile.hpp
